Bug 520493 - Fix regression in Ogg playback. r=doublec