media/liboggplay/update.sh
@@ -60,4 +60,4 @@ patch -p3 < fix-17ef4ca82df28.patch
 patch -p3 < handle-read-errors.patch
 patch -p3 < fishsound_reset.patch
 patch -p3 < bug504843.patch
-
+patch -p3 < bug520493.patch
